--- a/todoapp-presentation/src/main/angular/src/app/app.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.sass
@@ -1,25 +1,3 @@
-$bg-color: #333
-$text-color: #ccc
-
-.nav-link
-  background: $bg-color
-  padding: .5rem .75rem
-  border-radius: .25rem
-  color: $text-color
-  font-size: 1rem
-  border-color: white
-
-.nav-link.active
-  background: lighten($bg-color, 40)
-  padding: .5rem .75rem
-  border-radius: .25rem
-  color: black
-  font-size: 1rem
-  border-color: white
-
-#logoutBtn
-  background: $bg-color
-  padding: .5rem .75rem
-  border-radius: .25rem
-  color: $text-color
-  border-color: black
+.flexExpand 
+    text-align: center
+    flex: 1 1 auto
