--- a/todoapp-presentation/src/main/angular/src/app/components2/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/profile/profile.component.html
@@ -22,7 +22,7 @@
         </div>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" type="submit" [disabled]="selectedItem === null" (click)="showSelectedItem()">Show Item</button>
+        <button mat-raised-button color="accent" type="submit" [disabled]="selectedItem === null" (click)="showSelectedItem()">Show Item</button>
     </mat-card-actions>
 </mat-card>
 <mat-card class="card">
@@ -40,6 +40,6 @@
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit" [disabled]="!canDeleteUser()" (click)="deleteUser()">Delete User</button>
+      <button mat-raised-button color="accent" type="submit" [disabled]="!canDeleteUser()" (click)="deleteUser()">Delete User</button>
     </mat-card-actions>
 </mat-card>
