--- a/todoapp-presentation/src/main/angular/src/styles.sass
+++ b/todoapp-presentation/src/main/angular/src/styles.sass
@@ -1,2 +1,8 @@
 .mat-nav-list:hover .mat-icon
     color : #5bae50
+
+.st0
+    @if $loggedIn
+        fill: #5bae50
+    @else
+        fill: #FFFFFF
