--- a/todoapp-presentation/src/main/angular/src/app/components2/registration/registration.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/registration/registration.component.html
@@ -2,7 +2,7 @@
   <mat-card class="card">
     <mat-card-header>
       <mat-card-title>Registration</mat-card-title>
-      <mat-card-subtitle>Become a part of <strong>tuDo</strong></mat-card-subtitle>
+      <mat-card-subtitle>Become a part of <strong>eventDo</strong></mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
 
