--- a/todoapp-presentation/src/main/angular/src/app/components2/dialog/contents/item-details-dialog-content/item-details-dialog-content.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/dialog/contents/item-details-dialog-content/item-details-dialog-content.component.html
@@ -7,7 +7,7 @@
   
         <wt2-message-box [messageModel]="messageModel"></wt2-message-box>
         
-        <p>List: {{data.item.listTitle}}</p>
+        <p>List: {{data.item.list.title}}</p>
 
         <mat-form-field class="full-width">
           <input matInput placeholder="Title:" formControlName="title">
@@ -25,12 +25,12 @@
 
         <mat-form-field class="full-width">
           <mat-label>Select a username (assignee)</mat-label>
-          <mat-select [(value)]="data.item.assignee" >
+          <mat-select [(value)]="selectedUsername" >
             <mat-option *ngFor="let username of usernames" [value]="usernames">
-              {{usernames}}
+              {{username}}
             </mat-option>
           </mat-select>
-          <mat-error *ngIf="data.item.assignee === ''">
+          <mat-error *ngIf="selectedUsername === '' || usernames.includes(selectedUsername)===false">
             Assignee is <strong>required</strong>
           </mat-error>
       </mat-form-field>
