--- a/todoapp-presentation/src/main/angular/src/app/components2/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/profile/profile.component.html
@@ -34,7 +34,7 @@
             <mat-label>Select a username</mat-label>
             <mat-select [(value)]="selectedUsername">
               <mat-option *ngFor="let username of usernames" [value]="usernames">
-                {{usernames}}
+                {{username}}
               </mat-option>
             </mat-select>
         </mat-form-field>
