--- a/todoapp-presentation/src/main/angular/src/app/components2/dialog/contents/item-creation-dialog-content/item-creation-dialog-content.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/dialog/contents/item-creation-dialog-content/item-creation-dialog-content.component.html
@@ -44,7 +44,7 @@
 
       </mat-card-content>
       <mat-card-actions>
-        <button mat-raised-button color="primary" type="submit">Create</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!canCreateItem()">Create</button>
         <button mat-raised-button color="primary" type="button" (click)="closeDialog()">Close</button>
       </mat-card-actions>
     </mat-card>
