Error-Message-Styling

--- a/todoapp-presentation/src/main/angular/src/styles.sass
+++ b/todoapp-presentation/src/main/angular/src/styles.sass
@@ -1,2 +1,13 @@
 .mat-nav-list:hover .mat-icon
     color : #5bae50
+
+.alert
+    color: #f44336
+    font-weight: 500
+    font-family: Roboto, "Helvetica Neue", sans-serif
+    background-color: #ffcdd2
+    border-color: #f44336
+    border:3px solid
+    border-radius: 15px
+    padding: 5px
+    margin: 10px
