--- a/todoapp-presentation/src/main/angular/src/app/components2/profile/profile.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/profile/profile.component.html
@@ -33,8 +33,8 @@
         <mat-form-field appearance="fill">
             <mat-label>Select a username</mat-label>
             <mat-select [(value)]="selectedUsername">
-              <mat-option *ngFor="let username of usernames" [value]="username">
-                {{username}}
+              <mat-option *ngFor="let username of usernames" [value]="username[1]">
+                {{username[1]}}
               </mat-option>
             </mat-select>
         </mat-form-field>
