--- a/todoapp-presentation/src/main/angular/src/app/components2/dialog/contents/item-details-dialog-content/item-details-dialog-content.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/components2/dialog/contents/item-details-dialog-content/item-details-dialog-content.component.html
@@ -7,7 +7,7 @@
   
         <wt2-message-box [messageModel]="messageModel"></wt2-message-box>
         
-        <p>List: {{data.item.list.title}}</p>
+        <p>List ID: {{data.item.list}}</p>
 
         <mat-form-field class="full-width">
           <input matInput placeholder="Title:" formControlName="title">
