--- a/todoapp-presentation/src/main/angular/src/app/app.component.html
+++ b/todoapp-presentation/src/main/angular/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav #sidenav mode="side" fixedInViewport
   [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
   [mode]="(isHandset$ | async) ? 'over' : 'side'"
-  [opened]="(isHandset$ | async) === false">
+  [opened]="(isHandset$ | async) === true">
       <mat-nav-list>
         <a *ngIf="!isLoggedIn" 
         mat-list-item 
