--- a/todoapp-presentation/src/main/angular/src/app/components2/dashboard/dashboard.component.sass
+++ b/todoapp-presentation/src/main/angular/src/app/components2/dashboard/dashboard.component.sass
@@ -1,13 +1,3 @@
-.dashboard-card 
-  margin: 20px
-
-.list-card 
-  position: absolute
-  top: 15px
-  left: 15px
-  right: 15px
-  bottom: 15px
-
 .more-button 
   position: absolute
   top: 5px
@@ -19,7 +9,8 @@
 .full-width 
   width: 80%
 
-.card 
-  min-width: 120px
-  margin: 20px auto
+.list-details
+  text-align: left
 
+.list-card
+  width: 100%
