aus rot mach blau

--- a/todoapp-presentation/src/main/angular/src/styles.sass
+++ b/todoapp-presentation/src/main/angular/src/styles.sass
@@ -2,11 +2,11 @@
     color : #5bae50
 
 .alert
-    color: #f44336
+    color: #03a9f4
     font-weight: 500
     font-family: Roboto, "Helvetica Neue", sans-serif
-    background-color: #ffcdd2
-    border-color: #f44336
+    background-color: #b3e5fc
+    border-color: #03a9f4
     border:3px solid
     border-radius: 15px
     padding: 5px
